Cluster/NylApi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nyl-api
spec:
  type: ClusterIP
  selector:
    app: nyl-api
  ports:
    - name: http
      port: 8000
      targetPort: http
