Cluster/NylApi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nyl-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
    - host: api.nyl.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nyl-api
                port:
                  number: 8000
